versions/v2.15/modules/fr/pages/rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/microsoft-ad-federation-service-saml.adoc
= Configuration du service de fédération Microsoft Active Directory (SAML)
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2025-09-18
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/configure-microsoft-ad-federation-service-saml/index.adoc 
:product-path: rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/microsoft-ad-federation-service-saml.adoc
ifeval::["{build-type}" != "community"]
:xref-ms-adfs-for-rancher: xref:rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/ms-adfs-for-rancher.adoc
:xref-rancher-for-ms-adfs: xref:rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/rancher-for-ms-adfs.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-ms-adfs-for-rancher: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/configure-microsoft-ad-federation-service-saml/configure-ms-adfs-for-rancher.adoc
:xref-rancher-for-ms-adfs: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/configure-microsoft-ad-federation-service-saml/configure-rancher-for-ms-adfs.adoc
endif::[]

Si votre organisation utilise les services de fédération Microsoft Active Directory (AD FS) pour l'authentification des utilisateurs, vous pouvez configurer Rancher pour permettre à vos utilisateurs de se connecter en utilisant leurs identifiants AD FS.

[#_prerequisites]
== Conditions préalables

Vous devez avoir Rancher installé.

* Obtenez l'URL de votre serveur Rancher. Lors de la configuration d'AD FS, remplacez cette URL par `<RANCHER_SERVER>`.
* Vous devez avoir un compte d'administrateur global sur votre installation Rancher.

Vous devez avoir un https://docs.microsoft.com/en-us/windows-server/identity/active-directory-federation-services[Serveur Microsoft AD FS] configuré.

* Obtenez l'adresse IP/Nom DNS de votre serveur AD FS. Lors de la configuration d'AD FS, remplacez cette adresse IP/Nom DNS par `<AD_SERVER>`.
* Vous devez avoir accès pour ajouter https://docs.microsoft.com/en-us/windows-server/identity/ad-fs/operations/create-a-relying-party-trust[relations de confiance] sur votre serveur AD FS.

[#_setup_outline]
== Plan de configuration

La configuration de Microsoft AD FS avec le serveur Rancher nécessite de configurer AD FS sur votre serveur Active Directory et de configurer Rancher pour utiliser votre serveur AD FS. Les pages suivantes servent de guides pour configurer l'authentification Microsoft AD FS sur votre installation Rancher.

* {xref-ms-adfs-for-rancher}[1. Configuration de Microsoft AD FS pour Rancher]
* {xref-rancher-for-ms-adfs}[2. Configuration de Rancher pour Microsoft AD FS]

[NOTE]
.Avertissements concernant le fournisseur SAML
====
* Les utilisateurs et les groupes ne sont pas validés lorsque vous leur attribuez des autorisations dans Rancher.
* Lors de l'ajout d'utilisateurs, les identifiants d'utilisateur exacts (c'est-à-dire `UID Field`) doivent être saisis correctement. Lorsque vous tapez l'identifiant de l'utilisateur, il n'y aura pas de recherche d'autres identifiants d'utilisateur pouvant correspondre.
* Lors de l'ajout de groupes, vous devez sélectionner le groupe dans le menu déroulant à côté de la zone de texte. Rancher suppose que toute saisie dans la zone de texte est un utilisateur.
* Le menu déroulant des groupes affiche uniquement les groupes dont vous êtes membre. Cependant, si vous avez des permissions d'administrateur ou des permissions d'administrateur restreintes, vous pouvez rejoindre un groupe dont vous n'êtes pas membre.
====

[#__xref_ms_adfs_for_rancher_next_configuring_microsoft_ad_fs_for_rancher]
=== {xref-ms-adfs-for-rancher}[Suivant : Configuration de Microsoft AD FS pour Rancher]
